# path-clean

./: .travis.yml  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
scripts/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
src/: lib.rs
